加入代码比对工具

--- a/FilesCompare/FilesCompare.csproj
+++ b/FilesCompare/FilesCompare.csproj
@@ -135,6 +135,183 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="Reference\Diffuse\atk.pyd" />
+    <None Include="Reference\Diffuse\bz2.pyd" />
+    <None Include="Reference\Diffuse\cairo._cairo.pyd" />
+    <None Include="Reference\Diffuse\diffuserc" />
+    <None Include="Reference\Diffuse\etc\fonts\fonts.conf" />
+    <None Include="Reference\Diffuse\etc\fonts\fonts.dtd" />
+    <None Include="Reference\Diffuse\etc\gtk-2.0\gdk-pixbuf.loaders" />
+    <None Include="Reference\Diffuse\etc\gtk-2.0\gtk.immodules" />
+    <None Include="Reference\Diffuse\etc\gtk-2.0\gtkrc" />
+    <None Include="Reference\Diffuse\etc\gtk-2.0\im-multipress.conf" />
+    <None Include="Reference\Diffuse\etc\pango\pango.modules" />
+    <None Include="Reference\Diffuse\gobject._gobject.pyd" />
+    <None Include="Reference\Diffuse\gtk.glade.pyd" />
+    <None Include="Reference\Diffuse\gtk._gtk.pyd" />
+    <None Include="Reference\Diffuse\library.zip" />
+    <None Include="Reference\Diffuse\lib\atk-1.0.lib" />
+    <None Include="Reference\Diffuse\lib\cairo.lib" />
+    <None Include="Reference\Diffuse\lib\charset.alias" />
+    <None Include="Reference\Diffuse\lib\expat.lib" />
+    <None Include="Reference\Diffuse\lib\fontconfig.lib" />
+    <None Include="Reference\Diffuse\lib\gailutil.lib" />
+    <None Include="Reference\Diffuse\lib\gdk-win32-2.0.lib" />
+    <None Include="Reference\Diffuse\lib\gdk_pixbuf-2.0.lib" />
+    <None Include="Reference\Diffuse\lib\gio-2.0.lib" />
+    <None Include="Reference\Diffuse\lib\glib-2.0.lib" />
+    <None Include="Reference\Diffuse\lib\gmodule-2.0.lib" />
+    <None Include="Reference\Diffuse\lib\gobject-2.0.lib" />
+    <None Include="Reference\Diffuse\lib\gthread-2.0.lib" />
+    <None Include="Reference\Diffuse\lib\gtk-win32-2.0.lib" />
+    <None Include="Reference\Diffuse\lib\intl.lib" />
+    <None Include="Reference\Diffuse\lib\libatk-1.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libcairo.dll.a" />
+    <None Include="Reference\Diffuse\lib\libexpat.dll.a" />
+    <None Include="Reference\Diffuse\lib\libfontconfig.dll.a" />
+    <None Include="Reference\Diffuse\lib\libfreetype.dll.a" />
+    <None Include="Reference\Diffuse\lib\libgailutil.dll.a" />
+    <None Include="Reference\Diffuse\lib\libgdk-win32-2.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libgdk_pixbuf-2.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libgio-2.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libglib-2.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libgmodule-2.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libgobject-2.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libgthread-2.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libgtk-win32-2.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libintl.dll.a" />
+    <None Include="Reference\Diffuse\lib\libjpeg.dll.a" />
+    <None Include="Reference\Diffuse\lib\libpango-1.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libpangocairo-1.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libpangoft2-1.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libpangowin32-1.0.dll.a" />
+    <None Include="Reference\Diffuse\lib\libpng.lib" />
+    <None Include="Reference\Diffuse\lib\libpng12.dll.a" />
+    <None Include="Reference\Diffuse\lib\libtiff.dll.a" />
+    <None Include="Reference\Diffuse\lib\libtiffxx.dll.a" />
+    <None Include="Reference\Diffuse\lib\libz.a" />
+    <None Include="Reference\Diffuse\lib\pango-1.0.lib" />
+    <None Include="Reference\Diffuse\lib\pangocairo-1.0.lib" />
+    <None Include="Reference\Diffuse\lib\pangoft2-1.0.lib" />
+    <None Include="Reference\Diffuse\lib\pangowin32-1.0.lib" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\atk.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\cairo-ft.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\cairo-pdf.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\cairo-png.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\cairo-ps.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\cairo-svg.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\cairo-win32-font.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\cairo-win32.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\cairo.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\fontconfig.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\freetype2.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gail.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gdk-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gdk-pixbuf-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gdk-win32-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gio-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\glib-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gmodule-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gmodule-no-export-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gobject-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gthread-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gtk+-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\gtk+-win32-2.0.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\libpng.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\libpng12.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\pango.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\pangocairo.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\pangoft2.pc" />
+    <None Include="Reference\Diffuse\lib\pkgconfig\pangowin32.pc" />
+    <None Include="Reference\Diffuse\lib\zdll.lib" />
+    <None Include="Reference\Diffuse\locale\cs\LC_MESSAGES\diffuse.mo" />
+    <None Include="Reference\Diffuse\locale\de\LC_MESSAGES\diffuse.mo" />
+    <None Include="Reference\Diffuse\locale\es\LC_MESSAGES\diffuse.mo" />
+    <None Include="Reference\Diffuse\locale\it\LC_MESSAGES\diffuse.mo" />
+    <None Include="Reference\Diffuse\locale\ja\LC_MESSAGES\diffuse.mo" />
+    <None Include="Reference\Diffuse\locale\ko\LC_MESSAGES\diffuse.mo" />
+    <None Include="Reference\Diffuse\locale\pl\LC_MESSAGES\diffuse.mo" />
+    <None Include="Reference\Diffuse\locale\ru\LC_MESSAGES\diffuse.mo" />
+    <None Include="Reference\Diffuse\locale\zh_CN\LC_MESSAGES\diffuse.mo" />
+    <None Include="Reference\Diffuse\Microsoft.VC90.CRT.manifest" />
+    <None Include="Reference\Diffuse\pango.pyd" />
+    <None Include="Reference\Diffuse\pangocairo.pyd" />
+    <None Include="Reference\Diffuse\select.pyd" />
+    <None Include="Reference\Diffuse\share\locale\cs\LC_MESSAGES\atk10.mo" />
+    <None Include="Reference\Diffuse\share\locale\cs\LC_MESSAGES\glib20.mo" />
+    <None Include="Reference\Diffuse\share\locale\cs\LC_MESSAGES\gtk20-properties.mo" />
+    <None Include="Reference\Diffuse\share\locale\cs\LC_MESSAGES\gtk20.mo" />
+    <None Include="Reference\Diffuse\share\locale\de\LC_MESSAGES\atk10.mo" />
+    <None Include="Reference\Diffuse\share\locale\de\LC_MESSAGES\glib20.mo" />
+    <None Include="Reference\Diffuse\share\locale\de\LC_MESSAGES\gtk20-properties.mo" />
+    <None Include="Reference\Diffuse\share\locale\de\LC_MESSAGES\gtk20.mo" />
+    <None Include="Reference\Diffuse\share\locale\es\LC_MESSAGES\atk10.mo" />
+    <None Include="Reference\Diffuse\share\locale\es\LC_MESSAGES\glib20.mo" />
+    <None Include="Reference\Diffuse\share\locale\es\LC_MESSAGES\gtk20-properties.mo" />
+    <None Include="Reference\Diffuse\share\locale\es\LC_MESSAGES\gtk20.mo" />
+    <None Include="Reference\Diffuse\share\locale\it\LC_MESSAGES\atk10.mo" />
+    <None Include="Reference\Diffuse\share\locale\it\LC_MESSAGES\glib20.mo" />
+    <None Include="Reference\Diffuse\share\locale\it\LC_MESSAGES\gtk20-properties.mo" />
+    <None Include="Reference\Diffuse\share\locale\it\LC_MESSAGES\gtk20.mo" />
+    <None Include="Reference\Diffuse\share\locale\ja\LC_MESSAGES\atk10.mo" />
+    <None Include="Reference\Diffuse\share\locale\ja\LC_MESSAGES\glib20.mo" />
+    <None Include="Reference\Diffuse\share\locale\ja\LC_MESSAGES\gtk20-properties.mo" />
+    <None Include="Reference\Diffuse\share\locale\ja\LC_MESSAGES\gtk20.mo" />
+    <None Include="Reference\Diffuse\share\locale\ko\LC_MESSAGES\atk10.mo" />
+    <None Include="Reference\Diffuse\share\locale\ko\LC_MESSAGES\glib20.mo" />
+    <None Include="Reference\Diffuse\share\locale\ko\LC_MESSAGES\gtk20-properties.mo" />
+    <None Include="Reference\Diffuse\share\locale\ko\LC_MESSAGES\gtk20.mo" />
+    <None Include="Reference\Diffuse\share\locale\pl\LC_MESSAGES\atk10.mo" />
+    <None Include="Reference\Diffuse\share\locale\pl\LC_MESSAGES\glib20.mo" />
+    <None Include="Reference\Diffuse\share\locale\pl\LC_MESSAGES\gtk20-properties.mo" />
+    <None Include="Reference\Diffuse\share\locale\pl\LC_MESSAGES\gtk20.mo" />
+    <None Include="Reference\Diffuse\share\locale\ru\LC_MESSAGES\atk10.mo" />
+    <None Include="Reference\Diffuse\share\locale\ru\LC_MESSAGES\glib20.mo" />
+    <None Include="Reference\Diffuse\share\locale\ru\LC_MESSAGES\gtk20-properties.mo" />
+    <None Include="Reference\Diffuse\share\locale\ru\LC_MESSAGES\gtk20.mo" />
+    <None Include="Reference\Diffuse\share\locale\zh_CN\LC_MESSAGES\atk10.mo" />
+    <None Include="Reference\Diffuse\share\locale\zh_CN\LC_MESSAGES\glib20.mo" />
+    <None Include="Reference\Diffuse\share\locale\zh_CN\LC_MESSAGES\gtk20-properties.mo" />
+    <None Include="Reference\Diffuse\share\locale\zh_CN\LC_MESSAGES\gtk20.mo" />
+    <None Include="Reference\Diffuse\share\themes\Default\gtk-2.0-key\gtkrc" />
+    <None Include="Reference\Diffuse\share\themes\Emacs\gtk-2.0-key\gtkrc" />
+    <None Include="Reference\Diffuse\share\themes\MS-Windows\gtk-2.0\gtkrc" />
+    <None Include="Reference\Diffuse\share\themes\Raleigh\gtk-2.0\gtkrc" />
+    <None Include="Reference\Diffuse\syntax\bash.syntax" />
+    <None Include="Reference\Diffuse\syntax\c++.syntax" />
+    <None Include="Reference\Diffuse\syntax\csh.syntax" />
+    <None Include="Reference\Diffuse\syntax\csharp.syntax" />
+    <None Include="Reference\Diffuse\syntax\css.syntax" />
+    <None Include="Reference\Diffuse\syntax\erlang.syntax" />
+    <None Include="Reference\Diffuse\syntax\fortran.syntax" />
+    <None Include="Reference\Diffuse\syntax\gettext.syntax" />
+    <None Include="Reference\Diffuse\syntax\glsl.syntax" />
+    <None Include="Reference\Diffuse\syntax\html.syntax" />
+    <None Include="Reference\Diffuse\syntax\ini.syntax" />
+    <None Include="Reference\Diffuse\syntax\java.syntax" />
+    <None Include="Reference\Diffuse\syntax\javascript.syntax" />
+    <None Include="Reference\Diffuse\syntax\json.syntax" />
+    <None Include="Reference\Diffuse\syntax\jsp.syntax" />
+    <None Include="Reference\Diffuse\syntax\makefile.syntax" />
+    <None Include="Reference\Diffuse\syntax\objective-c++.syntax" />
+    <None Include="Reference\Diffuse\syntax\octave.syntax" />
+    <None Include="Reference\Diffuse\syntax\opencl.syntax" />
+    <None Include="Reference\Diffuse\syntax\pascal.syntax" />
+    <None Include="Reference\Diffuse\syntax\patch.syntax" />
+    <None Include="Reference\Diffuse\syntax\perl.syntax" />
+    <None Include="Reference\Diffuse\syntax\php.syntax" />
+    <None Include="Reference\Diffuse\syntax\python.syntax" />
+    <None Include="Reference\Diffuse\syntax\r.syntax" />
+    <None Include="Reference\Diffuse\syntax\ruby.syntax" />
+    <None Include="Reference\Diffuse\syntax\sql.syntax" />
+    <None Include="Reference\Diffuse\syntax\tcl.syntax" />
+    <None Include="Reference\Diffuse\syntax\vb.syntax" />
+    <None Include="Reference\Diffuse\syntax\verilog.syntax" />
+    <None Include="Reference\Diffuse\syntax\vhdl.syntax" />
+    <None Include="Reference\Diffuse\syntax\xml.syntax" />
+    <None Include="Reference\Diffuse\unicodedata.pyd" />
+    <None Include="Reference\Diffuse\unins000.dat" />
+    <None Include="Reference\Diffuse\_socket.pyd" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="navwj.ico" />
@@ -145,6 +322,85 @@
     <Resource Include="Style\folder.ico" />
     <Resource Include="Style\File.ico" />
     <Resource Include="Style\navwj.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Reference\Diffuse\add_path.exe" />
+    <Resource Include="Reference\Diffuse\AUTHORS.txt" />
+    <Resource Include="Reference\Diffuse\ChangeLog.txt" />
+    <Resource Include="Reference\Diffuse\ChangeLog_ru.txt" />
+    <Resource Include="Reference\Diffuse\COPYING.txt" />
+    <Content Include="Reference\Diffuse\diffuse.exe" />
+    <Content Include="Reference\Diffuse\diffusew.exe" />
+    <Content Include="Reference\Diffuse\freetype6.dll" />
+    <Content Include="Reference\Diffuse\intl.dll" />
+    <Content Include="Reference\Diffuse\Jad.exe" />
+    <Content Include="Reference\Diffuse\libatk-1.0-0.dll" />
+    <Content Include="Reference\Diffuse\libcairo-2.dll" />
+    <Content Include="Reference\Diffuse\libexpat-1.dll" />
+    <Content Include="Reference\Diffuse\libfontconfig-1.dll" />
+    <Content Include="Reference\Diffuse\libgdk-win32-2.0-0.dll" />
+    <Content Include="Reference\Diffuse\libgdk_pixbuf-2.0-0.dll" />
+    <Content Include="Reference\Diffuse\libgio-2.0-0.dll" />
+    <Content Include="Reference\Diffuse\libglib-2.0-0.dll" />
+    <Content Include="Reference\Diffuse\libgmodule-2.0-0.dll" />
+    <Content Include="Reference\Diffuse\libgobject-2.0-0.dll" />
+    <Content Include="Reference\Diffuse\libgthread-2.0-0.dll" />
+    <Content Include="Reference\Diffuse\libgtk-win32-2.0-0.dll" />
+    <Content Include="Reference\Diffuse\libpango-1.0-0.dll" />
+    <Content Include="Reference\Diffuse\libpangocairo-1.0-0.dll" />
+    <Content Include="Reference\Diffuse\libpangoft2-1.0-0.dll" />
+    <Content Include="Reference\Diffuse\libpangowin32-1.0-0.dll" />
+    <Content Include="Reference\Diffuse\libpng12-0.dll" />
+    <Content Include="Reference\Diffuse\lib\atk-1.0.def" />
+    <Content Include="Reference\Diffuse\lib\cairo.def" />
+    <Content Include="Reference\Diffuse\lib\fontconfig.def" />
+    <Content Include="Reference\Diffuse\lib\gio-2.0.def" />
+    <Content Include="Reference\Diffuse\lib\glib-2.0.def" />
+    <Content Include="Reference\Diffuse\lib\glib-2.0\include\glibconfig.h" />
+    <Content Include="Reference\Diffuse\lib\gmodule-2.0.def" />
+    <Content Include="Reference\Diffuse\lib\gobject-2.0.def" />
+    <Content Include="Reference\Diffuse\lib\gthread-2.0.def" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\engines\libpixmap.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\engines\libwimp.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-ani.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-bmp.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-gif.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-icns.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-ico.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-jpeg.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-pcx.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-png.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-pnm.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-ras.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-tga.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-tiff.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-wbmp.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-xbm.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\2.10.0\loaders\libpixbufloader-xpm.dll" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\include\gdkconfig.h" />
+    <Content Include="Reference\Diffuse\lib\gtk-2.0\modules\libgail.dll" />
+    <Content Include="Reference\Diffuse\lib\intl.def" />
+    <Content Include="Reference\Diffuse\lib\libexpat.def" />
+    <Content Include="Reference\Diffuse\lib\libpng.def" />
+    <Content Include="Reference\Diffuse\lib\pango-1.0.def" />
+    <Content Include="Reference\Diffuse\lib\pangocairo-1.0.def" />
+    <Content Include="Reference\Diffuse\lib\pangoft2-1.0.def" />
+    <Content Include="Reference\Diffuse\lib\pangowin32-1.0.def" />
+    <Content Include="Reference\Diffuse\lib\zlib.def" />
+    <Content Include="Reference\Diffuse\manual.html" />
+    <Content Include="Reference\Diffuse\manual_cs.html" />
+    <Content Include="Reference\Diffuse\manual_it.html" />
+    <Content Include="Reference\Diffuse\manual_ru.html" />
+    <Content Include="Reference\Diffuse\msvcm90.dll" />
+    <Content Include="Reference\Diffuse\msvcp90.dll" />
+    <Content Include="Reference\Diffuse\msvcr90.dll" />
+    <Content Include="Reference\Diffuse\python26.dll" />
+    <Resource Include="Reference\Diffuse\README.txt" />
+    <Resource Include="Reference\Diffuse\README_ru.txt" />
+    <Content Include="Reference\Diffuse\style.css" />
+    <Content Include="Reference\Diffuse\unins000.exe" />
+    <Content Include="Reference\Diffuse\w9xpopen.exe" />
+    <Content Include="Reference\Diffuse\zlib1.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
