--- a/FilesCompare/FilesCompare.csproj
+++ b/FilesCompare/FilesCompare.csproj
@@ -83,6 +83,7 @@
     <Compile Include="CompareHelper\DiffHelper.cs" />
     <Compile Include="CompareHelper\MD5Helper.cs" />
     <Compile Include="CompareHelper\UnCompressHelper.cs" />
+    <Compile Include="Converter\JarNameConverter.cs" />
     <Compile Include="Converter\PathConverter.cs" />
     <Compile Include="Model\FNode.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
