增加黑名单白名单配置功能
增加黑名单白名单配置功能，配置功能基本完成。

--- a/FilesCompare/FilesCompare.csproj
+++ b/FilesCompare/FilesCompare.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Converter\PathConverter.cs" />
     <Compile Include="Model\FNode.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="Model\StringWraper.cs" />
     <Compile Include="View\WinWait.xaml.cs">
       <DependentUpon>WinWait.xaml</DependentUpon>
     </Compile>
