黑白名单采用全路径匹配，配置时可使用输入法

--- a/FilesCompare/FilesCompare.csproj
+++ b/FilesCompare/FilesCompare.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Converter\JarNameConverter.cs" />
     <Compile Include="Converter\PathConverter.cs" />
     <Compile Include="Model\FNode.cs" />
+    <Compile Include="Style\PopubEx.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="Model\StringWraper.cs" />
     <Compile Include="View\WinWait.xaml.cs">
