--- a/FilesCompare/FilesCompare.csproj
+++ b/FilesCompare/FilesCompare.csproj
@@ -134,6 +134,9 @@
     <Compile Include="Style\SelectableTextBlock.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="Model\StringWraper.cs" />
+    <Compile Include="View\ResPreview.xaml.cs">
+      <DependentUpon>ResPreview.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\WinTips.xaml.cs">
       <DependentUpon>WinTips.xaml</DependentUpon>
     </Compile>
@@ -157,6 +160,10 @@
     <Page Include="Style\ybx_GraySimpleStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ResPreview.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\WinTips.xaml">
       <Generator>MSBuild:Compile</Generator>
