+无边框窗口
+无边框窗口可拖动，调整大小
>优化主窗口
>优化截图预览窗口

--- a/FilesCompare/FilesCompare.csproj
+++ b/FilesCompare/FilesCompare.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Converter\JarNameConverter.cs" />
     <Compile Include="Converter\PathConverter.cs" />
     <Compile Include="Model\FNode.cs" />
+    <Compile Include="Style\BxWindow.cs" />
     <Compile Include="Style\PopubEx.cs" />
     <Compile Include="Style\SelectableTextBlock.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
