--- a/FilesCompare/FilesCompare.csproj
+++ b/FilesCompare/FilesCompare.csproj
@@ -126,6 +126,7 @@
     <Compile Include="CompareHelper\FileTypeRelative.cs" />
     <Compile Include="CompareHelper\MD5Helper.cs" />
     <Compile Include="CompareHelper\CompressHelper.cs" />
+    <Compile Include="CompareHelper\XmlHelper.cs" />
     <Compile Include="Converter\ImportPathConverter.cs" />
     <Compile Include="Converter\JarNameConverter.cs" />
     <Compile Include="Converter\PathConverter.cs" />
